# gh-archive

./: .bruin.yml  .gitignore  README.md  main.py  peer-reviewers.md  pyproject.toml
.streamlit/: config.toml
dashboard/: streamlit_app.py
pipeline/: pipeline.yml
pipeline/assets/: download_gharchive.py  download_gharchive_local.py  ext_raw_events_cloud.sql  mart_repo_actor_activity.sql  mart_repo_daily_activity.sql  mart_repo_daily_activity_cloud.sql  mart_repo_daily_event_type_activity.sql  mart_repo_daily_event_type_activity_cloud.sql  mart_repo_summary.sql  raw_events.sql  raw_events_cloud.sql  stg_events.sql  stg_events_cloud.sql  stg_selected_events.sql  stg_selected_events_cloud.sql
pipeline/assets/cloud/: ext_raw_events_cloud.sql  mart_repo_actor_activity_cloud.sql  mart_repo_daily_event_type_activity_cloud.sql  stg_events_cloud.sql
pipeline/assets/local/: mart_repo_summary.sql
pipelines/: pipeline.yml
pipelines/cloud/: pipeline.yml
pipelines/cloud/assets/: download_gharchive_cloud.py  mart_repo_actor_activity_cloud.sql  mart_repo_daily_activity_cloud.sql  mart_repo_daily_event_type_activity_cloud.sql  mart_repo_summary_cloud.sql  raw_events_cloud.sql  stg_events_cloud.sql  stg_selected_events_cloud.sql
pipelines/local/: pipeline.yml
pipelines/local/assets/: mart_repo_actor_activity.sql  mart_repo_daily_activity.sql  mart_repo_daily_event_type_activity.sql  mart_repo_summary.sql  (+3 more)
scripts/: download_gharchive.sh  run_cloud.sh  run_local.sh  validate_gharchive.sh
sql/: raw_events.sql
terraform/: main.tf  terraform.tfvars  varaibles.tf
