[project]
name = "gh-archive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "db-dtypes>=1.4.4",
    "duckdb>=1.5.0",
    "google-cloud-bigquery>=3.41.0",
    "pandas>=3.0.2",
    "plotly-express>=0.4.1",
    "streamlit>=1.56.0",
]
